Add Index.htm. Proof it's still running.

--- a/Camp.Mvc.Swatter/Camp.Mvc.Swatter.csproj
+++ b/Camp.Mvc.Swatter/Camp.Mvc.Swatter.csproj
@@ -68,6 +68,7 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Index.htm" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
