--- a/Camp.Mvc.Swatter/Camp.Mvc.Swatter.csproj
+++ b/Camp.Mvc.Swatter/Camp.Mvc.Swatter.csproj
@@ -107,6 +107,7 @@
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Web.config" />
     <Content Include="Views\Flies\Index.cshtml" />
+    <Content Include="Views\Flies\Details.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
