Add Create view.

--- a/Camp.Mvc.Swatter/Camp.Mvc.Swatter.csproj
+++ b/Camp.Mvc.Swatter/Camp.Mvc.Swatter.csproj
@@ -108,6 +108,7 @@
     <Content Include="Views\Web.config" />
     <Content Include="Views\Flies\Index.cshtml" />
     <Content Include="Views\Flies\Details.cshtml" />
+    <Content Include="Views\Flies\Create.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
