--- a/Camp.Mvc.Swatter/Camp.Mvc.Swatter.csproj
+++ b/Camp.Mvc.Swatter/Camp.Mvc.Swatter.csproj
@@ -111,8 +111,7 @@
     <Content Include="Views\Flies\Create.cshtml" />
     <Content Include="Views\Flies\Edit.cshtml" />
     <Content Include="Views\Flies\Delete.cshtml" />
-    <Content Include="Views\Flies\_ViewStart.cshtml" />
-    <Content Include="Views\Home\_ViewStart.cshtml" />
+    <Content Include="Views\_ViewStart.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
