--- a/Camp.Mvc.Swatter/Camp.Mvc.Swatter.csproj
+++ b/Camp.Mvc.Swatter/Camp.Mvc.Swatter.csproj
@@ -112,7 +112,7 @@
     <Content Include="Views\Flies\Edit.cshtml" />
     <Content Include="Views\Flies\Delete.cshtml" />
     <Content Include="Views\_ViewStart.cshtml" />
-    <Content Include="Views\_Layout.cshtml" />
+    <Content Include="Views\Shared\_Layout.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
