--- a/Camp.Mvc.Swatter/Camp.Mvc.Swatter.csproj
+++ b/Camp.Mvc.Swatter/Camp.Mvc.Swatter.csproj
@@ -89,7 +89,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
+    <Content Include="Styles\Site.css" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
