Create a parent model: A pot where all the flies are.

--- a/Camp.Mvc.Swatter/Camp.Mvc.Swatter.csproj
+++ b/Camp.Mvc.Swatter/Camp.Mvc.Swatter.csproj
@@ -131,6 +131,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\Fly.cs" />
+    <Compile Include="Models\Pot.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
