--- a/Camp.Mvc.Swatter/Camp.Mvc.Swatter.csproj
+++ b/Camp.Mvc.Swatter/Camp.Mvc.Swatter.csproj
@@ -203,6 +203,7 @@
     <Content Include="Views\Flies\Edit.cshtml" />
     <Content Include="Views\Flies\Index.cshtml" />
     <Content Include="Views\Shared\MissingParameter.cshtml" />
+    <Content Include="Views\Flies\_FlyDetails.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
