--- a/Camp.Mvc.Swatter/Camp.Mvc.Swatter.csproj
+++ b/Camp.Mvc.Swatter/Camp.Mvc.Swatter.csproj
@@ -205,6 +205,7 @@
     <Content Include="Views\Flies\Index.cshtml" />
     <Content Include="Views\Shared\MissingParameter.cshtml" />
     <Content Include="Views\Flies\_FlyDetails.cshtml" />
+    <Content Include="Views\Flies\_FlyList.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
